unpackaged/main/default/objects/ob1__Output_History__c/fields/FFX_Project__c.field-meta.xml
<CustomField>
    <fullName>FFX_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Status Report Output Histories</relationshipLabel>
    <relationshipName>Output_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>