unpackaged/main/default/objects/ob1__Output_History__c/fields/ob1__Approved__c.field-meta.xml
<CustomField>
    <fullName>ob1__Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is this report approved for sending? (Only utilized If this template requires an approval process)</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>