unpackaged/main/default/objects/ob1__Output_History__c/fields/ob1__Attachment_Message__c.field-meta.xml
<CustomField>
    <fullName>ob1__Attachment_Message__c</fullName>
    <label>Attachment Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>