unpackaged/main/default/objects/ob1__Output_History__c/fields/ob1__BCC__c.field-meta.xml
<CustomField>
    <fullName>ob1__BCC__c</fullName>
    <label>BCC</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>