unpackaged/main/default/objects/ob1__Output_History__c/fields/ob1__Content_Type__c.field-meta.xml
<CustomField>
    <fullName>ob1__Content_Type__c</fullName>
    <label>Content Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>