unpackaged/main/default/objects/ob1__Output_History__c/fields/ob1__Object_ID__c.field-meta.xml
<CustomField>
    <fullName>ob1__Object_ID__c</fullName>
    <label>Object ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>