unpackaged/main/default/objects/ob1__Output_History__c/fields/ob1__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>ob1__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>