unpackaged/main/default/objects/ob1__Output_History__c/fields/ob1__Reply_To__c.field-meta.xml
<CustomField>
    <fullName>ob1__Reply_To__c</fullName>
    <label>Reply To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>