unpackaged/main/default/objects/ob1__Output_History__c/fields/ob1__Status__c.field-meta.xml
<CustomField>
    <fullName>ob1__Status__c</fullName>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>