unpackaged/main/default/objects/ob1__Output_History__c/fields/ob1__Use_Intelligent_Email_Limit_Management__c.field-meta.xml
<CustomField>
    <fullName>ob1__Use_Intelligent_Email_Limit_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Intelligent Email Limit Management</label>
    <type>Checkbox</type>
</CustomField>