unpackaged/main/default/objects/ob1__Output_History__c/fields/ob1__View__c.field-meta.xml
<CustomField>
    <fullName>ob1__View__c</fullName>
    <formula>HYPERLINK("/apex/ob1__output?output_id=" + Id,"View","_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View</label>
    <type>Text</type>
</CustomField>